--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "pburgh beta",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --exec babel-node ./index.js",
+    "dev": "nodemon --exec babel-node ./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
