--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "pburgh beta",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --exec babel-node ./src/index.js",
+    "dev": "nodemon --exec babel-node ./server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,7 +21,9 @@
     "@babel/core": "^7.16.12",
     "@babel/node": "^7.16.8",
     "@babel/preset-env": "^7.16.11",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^14.2.0",
+    "express": "^4.17.2",
     "phaser": "^3.55.2"
   }
 }
