--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
+    "open": "^8.4.0",
     "phaser": "^3.55.2"
   }
 }
