--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pburgh-phaser",
   "version": "1.0.0",
   "description": "pburgh beta",
-  "main": "index.js",
+  "private": true,
   "scripts": {
     "dev": "nodemon --exec babel-node ./server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -26,5 +26,9 @@
     "express": "^4.17.2",
     "open": "^8.4.0",
     "phaser": "^3.55.2"
+  },
+  "devDependencies": {
+    "webpack": "^5.67.0",
+    "webpack-cli": "^4.9.1"
   }
 }
