--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "pburgh beta",
   "private": true,
   "scripts": {
-    "dev": "nodemon --exec babel-node ./server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack",
+    "dev": "webpack serve --open"
   },
   "repository": {
     "type": "git",
@@ -21,14 +21,15 @@
     "@babel/core": "^7.16.12",
     "@babel/node": "^7.16.8",
     "@babel/preset-env": "^7.16.11",
-    "cookie-parser": "^1.4.6",
+    "babel-loader": "^8.2.3",
     "dotenv": "^14.2.0",
-    "express": "^4.17.2",
-    "open": "^8.4.0",
     "phaser": "^3.55.2"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^4.0.0",
+    "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.67.0",
-    "webpack-cli": "^4.9.1"
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.3"
   }
 }
